--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "consultemos-el-clima",
+  "name": "parcial-ii-santibari",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1"
   }
